--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,7 +6,7 @@
   </ul>
 <% end %>
 
-<%= form_with model: task, local: true do |f| %>
+<%= form_with model: task, local: true, url: choose_new_or_edit do |f| %>
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control", id: "task_name" %>
