--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -24,7 +24,7 @@
   <table class="table table-hover">
     <thead class="thead-default">
       <tr>
-        <th><%= Task.human_attribute_name(:name) %></th>
+        <th><%= sort_link(@q, :name, [:name, "created_at desc"]) %></th>
         <th><%= Task.human_attribute_name(:created_at) %></th>
         <th></th>
       </tr>
