--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,7 +6,7 @@
   </ul>
 <% end %>
 
-<%= form_with model: task, local: true, url: choose_new_or_edit do |f| %>
+<%= form_with model: task, local: true do |f| %>
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: "form-control", id: "task_name" %>
@@ -14,6 +14,10 @@
   <div class="form-group">
     <%= f.label :description %>
     <%= f.text_area :description, class: "form-control", id: "task_description" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <%= f.submit nil, class: "btn btn-primary" %>
 <% end %>
