--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,3 +43,10 @@
     </tbody>
   </table>
 </div>
+
+<%= link_to "エクスポート", tasks_path(format: :csv), class: "btn btn-primary mb-3"%>
+
+<%= form_tag import_tasks_path, multipart: true, class: "mb-3" do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "インポート", class: "btn btn-primary" %>
+<% end %>
